force-app/main/default/objects/GPMS_Emergency_Situation__c/GPMS_Emergency_Situation__c.object-meta.xml
<CustomObject>
    <label>Emergency Situation</label>
    <nameField>
        <displayFormat>EMG-{0000000}</displayFormat>
        <label>Emergency Situation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emergency Situations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>