force-app/main/default/objects/GPMS_Emergency_Situation__c/fields/Description_of_Emergency_Situation__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Emergency_Situation__c</fullName>
    <description>Add additional Emergency Situation if &apos;Other&apos; selected</description>
    <label>Description of Emergency Situation</label>
    <type>TextArea</type>
</CustomField>