force-app/main/default/objects/GPMS_Emergency_Situation__c/fields/Emergency_Situation_Status__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Situation_Status__c</fullName>
    <description>Details whether an emergency is currently occurring</description>
    <label>Emergency Situation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declared</fullName>
            </value>
            <value>
                <fullName>Ended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>