force-app/main/default/objects/GPMS_Emergency_Situation__c/fields/Emergency_Situation_Type__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Situation_Type__c</fullName>
    <description>Details what emergency has occured</description>
    <label>Emergency Situation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disaster</fullName>
            </value>
            <value>
                <fullName>Pandemic</fullName>
            </value>
            <value>
                <fullName>Epidemic</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>