force-app/main/default/objects/GPMS_Emergency_Situation__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Details end date of emergency situation</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>