force-app/main/default/objects/GPMS_Emergency_Situation__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BusinessLicense.Care_Type__c</field>
            <operation>equals</operation>
            <value>Residential</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>