force-app/main/default/objects/GPMS_Emergency_Situation__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Details start date of emergency situation</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>