force-app/main/default/objects/GPMS_Emergency_Situation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>if(Start_Date__c &gt; Today(),&quot;Future&quot;,if(End_Date__c &lt; Today(),&quot;Past&quot;,&quot;Current&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>