force-app/main/default/objects/GPMS_Emergency_Situation__c/validationRules/Incident_Check_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Incident_Check_Description</fullName>
    <active>true</active>
    <description>Description emergency situation is not available, when emergency situation type is not Other.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK( Description_of_Emergency_Situation__c )),
!ISPICKVAL( Emergency_Situation_Type__c , &quot;Other&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Description_of_Emergency_Situation__c</errorDisplayField>
    <errorMessage>Description emergency situation is not available, when emergency situation type is not Other.</errorMessage>
</ValidationRule>