force-app/main/default/objects/GPMS_Emergency_Situation__c/validationRules/Incident_Check_EndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Incident_Check_EndDate</fullName>
    <active>true</active>
    <description>End Date must be after Start Date.</description>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date must be after Start Date.</errorMessage>
</ValidationRule>