force-app/main/default/objects/GPMS_Emergency_Situation__c/validationRules/Incident_Check_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Incident_Check_Other</fullName>
    <active>true</active>
    <description>Description emergency situation is mandatory, when emergency situation type is Other.</description>
    <errorConditionFormula>AND(
ISBLANK( Description_of_Emergency_Situation__c ),
ISPICKVAL( Emergency_Situation_Type__c , &quot;Other&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Description_of_Emergency_Situation__c</errorDisplayField>
    <errorMessage>Description emergency situation is mandatory, when emergency situation type is Other.</errorMessage>
</ValidationRule>