force-app/main/default/objects/GPMS_Emergency_Situation__c/validationRules/Incident_Check_Overlap.validationRule-meta.xml
<ValidationRule>
    <fullName>Incident_Check_Overlap</fullName>
    <active>true</active>
    <description>Cannot overlap with another Emergency Situation record.</description>
    <errorConditionFormula>Overlap__c</errorConditionFormula>
    <errorMessage>Cannot overlap with another Emergency Situation record.</errorMessage>
</ValidationRule>