force-app/main/default/objects/GPMS_Emergency_Situation__c/validationRules/Incident_Check_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Incident_Check_Past</fullName>
    <active>true</active>
    <description>Past emergency situation is not editable.</description>
    <errorConditionFormula>AND(!IsNew() , PRIORVALUE(End_Date__c)  &lt; Today())</errorConditionFormula>
    <errorMessage>Past emergency situation is not editable.</errorMessage>
</ValidationRule>